--- a/index.html
+++ b/index.html
@@ -6,36 +6,36 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8"> 
 <link rel="stylesheet" href="style.css" type="text/css" />
 <script src="jquery.js" type="text/javascript"></script>
-<!--script src="client.js" type="text/javascript"></script-->
+<script src="client.js" type="text/javascript"></script>
 <title>attendbook</title>
 </head>
 
 <body>
 <div id="app">
 	<div id="connect">
-		<div id="login-form">
-			<form>
+		<div id="signin-form">
+			<form action="#">
 				<fieldset>
 				<p>
 					signin with your intranet account
 				</p>
 				<label for="id">ID</label>
-				<input id="login-id" type="text" name="id" />
+				<input id="signin-id" type="text" name="id" />
 				<label for="password">password</label>
-				<input id="login-password" type="password" name="password" />
-				<input id="login-button" type="submit" value="signin" />
+				<input id="signin-password" type="password" name="password" />
+				<input id="signin-button" type="submit" value="signin" />
 				<!--label for="save-account">save account</label>
-				<input id="login-save-account" type="checkbox" name="save-account" /-->
+				<input id="signin-save-account" type="checkbox" name="save-account" /-->
 				</fieldset>
 			</form>
 
 		</div>
-		<div id="login-click">
+		<div id="signin-click">
 			<!--span id="savedID">foobar</span> right?
 			<input type="button" value="click to signin" />
 			<input type="button" value="signin and don't ask" /-->
 		</div>
-		<div id="login-auto">
+		<div id="signin-auto">
 		</div>
 	</div>
 	<div id="loading">
