--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
 	</div>
 	<div id="record">
 		<p>
-			<span id="user-name">foobar</span>'s today record
+			<span id="user-name">foobar</span>'s record
 		</p>
 		<table><tbody>
 			<tr>
+				<th>날짜</th>
 				<th>순위</th>
 				<th>등급</th>
 				<th>지각률</th>
@@ -54,13 +55,14 @@
 				<th>평균지각시간</th>
 				<th>총점</th>
 			</tr>
-			<tr>
-				<td id="record-rank">105</td>
-				<td id="record-grade">B</td>
-				<td id="record-late-rate">0</td>
-				<td id="record-avg-facetime">10:22</td>
-				<td id="record-avg-latetime">0</td>
-				<td id="record-score">81.72</td>
+			<tr class="template">
+				<td class="date">2011-01-04</td>
+				<td class="rank">105</td>
+				<td class="grade">B</td>
+				<td class="late-rate">0</td>
+				<td class="avg-facetime">10:22</td>
+				<td class="avg-latetime">0</td>
+				<td class="score">81.72</td>
 			</tr>
 		</tbody></table>
 	</div>
