add other user querying feature

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 	<div id="record">
 		<div>
 			<input id="auto-signin-off" type="button" value="turn off auto-signin" />
+			<select></select>
 		</div>
 		<p>
 			<span id="user-name">foobar</span>'s record
